--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <html>
 <head>
 <title>Space Clock</title>
-<link rel="stylesheet" href="spaceclock.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
     </div>
 
 </div>
-<script src="spaceclock.js"></script>
+<script src="index.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
